tests/fail/test_sema_shadow_bug.tk
import std/io::println
import std/string::String
import std/error::Error

shape Dummy(val: i32)

impl Dummy {
    fn test_bug(self) -> Result<i32, Error> {
        if true {
            auto msg# = String::from("err")
            auto tmp = Result<i32, Error>::Err(Error::new(1, msg))
        }
        
        // If the bug exists, this will fail because `self` is now thought to be Result<i32, Error>
        auto x = self.val 
        return Result<i32, Error>::Ok(x)
    }
}

pub fn main() -> i32 {
    auto d = Dummy(val=42)
    auto r = d.test_bug()
    return 0
}
